# docstorage

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
src/: db.py  docstorage  main.py  parser.py
tests/: test_db.py
