[project]
name = "docstorage"
version = "0.1.0"
description = "A local, fully-managed file storage CLI app"
authors = [
    {name = "Michael Kornilich",email = "molego16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.1.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
